--- a/photos.html
+++ b/photos.html
@@ -12,10 +12,35 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    background-color: #f2f2f2;
+    min-height: 100vh;
+    background-color: #f8f9fa;
   }
-  #preview {
+  .container {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+  }
+  .upload-section {
+    margin-bottom: 20px;
+    text-align: center;
+  }
+  .upload-section label {
+    cursor: pointer;
+    padding: 10px 20px;
+    font-size: 16px;
+    background-color: #007bff;
+    border: none;
+    border-radius: 5px;
+    color: white;
+    transition: background-color 0.3s ease;
+  }
+  .upload-section label:hover {
+    background-color: #0056b3;
+  }
+  #file-input {
+    display: none;
+  }
+  .preview {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -23,62 +48,77 @@
   .preview-image-container {
     position: relative;
     margin: 10px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+    overflow: hidden;
+    width: 200px;
+    cursor: pointer;
+    transition: transform 0.2s ease;
+  }
+  .preview-image-container:hover {
+    transform: scale(1.1);
   }
   .preview-image {
-    max-width: 300px;
-    max-height: 300px;
-    cursor: pointer;
+    width: auto;
+    height: 140px;
+    display: block;
+    transition: transform 0.2s ease;
   }
-  .delete-button {
-    position: absolute;
-    top: 5px;
-    right: 35px;
-    background-color: rgba(255, 255, 255, 0.7);
-    border: none;
-    border-radius: 50%;
-    padding: 5px;
-    cursor: pointer;
+  .preview-image:hover {
+    transform: scale(1.1);
   }
-  .download-button {
+  .caption {
+    padding: 10px;
+    text-align: center;
+    background-color: rgba(255, 255, 255, 0.9);
+    border-top: 1px solid #ddd;
+    border-radius: 0 0 5px 5px;
+  }
+  .description {
+    padding: 10px;
+    text-align: center;
+    background-color: rgba(255, 255, 255, 0.9);
+    border-top: 1px solid #ddd;
+    border-radius: 0 0 5px 5px;
+  }
+  .button-group {
     position: absolute;
-    top: 5px;
-    right: 5px;
-    background-color: rgba(255, 255, 255, 0.7);
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(255, 255, 255, 0.9);
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .button-group button {
+    background-color: transparent;
     border: none;
-    border-radius: 50%;
-    padding: 5px;
     cursor: pointer;
+    transition: color 0.3s ease;
+  }
+  .button-group button:hover {
+    color: #007bff;
+  }
+  .button-group .download-button {
+    margin-right: 5px;
   }
 </style>
 </head>
 <body>
 
-<input type="file" id="file-input" accept="image/*">
-<button id="upload-button">Upload Images</button>
-<div id="preview"></div>
-
-<!-- Password Modal -->
-<div id="password-modal" class="modal">
-  <div class="modal-content">
-    <span class="close">&times;</span>
-    <p>Please enter the password:</p>
-    <input type="password" id="password-input">
-    <button id="password-submit">Submit</button>
+<div class="container">
+  <div class="upload-section">
+    <label for="file-input">Upload Images</label>
+    <input type="file" id="file-input" accept="image/*" multiple>
   </div>
+  <div class="preview" id="preview"></div>
 </div>
 
 <script>
-  // Password
-  const PASSWORD = "Spanner265";
-
-  // Modal
-  var modal = document.getElementById("password-modal");
-  var span = document.getElementsByClassName("close")[0];
-
-  // Event listeners
-  document.getElementById('upload-button').addEventListener('click', function() {
-    document.getElementById('file-input').click();
-  });
+  const captionPassword = "2024";
+  const descriptionPassword = "2024";
 
   document.getElementById('file-input').addEventListener('change', function() {
     var preview = document.getElementById('preview');
@@ -99,127 +139,155 @@
         img.className = 'preview-image';
         container.appendChild(img);
 
+        var caption = document.createElement('div');
+        caption.className = 'caption';
+        caption.textContent = 'Your Caption Here'; // Default caption text
+        container.appendChild(caption);
+
+        var description = document.createElement('textarea');
+        description.className = 'description';
+        description.placeholder = 'Enter Description'; // Placeholder text for description
+        container.appendChild(description);
+
+        var buttonGroup = document.createElement('div');
+        buttonGroup.className = 'button-group';
+
+        var downloadButton = document.createElement('button');
+        downloadButton.className = 'download-button';
+        downloadButton.innerHTML = '&#x2B07; Download';
+        downloadButton.onclick = function() {
+          var link = document.createElement('a');
+          link.href = imageData;
+          link.download = 'image';
+          document.body.appendChild(link);
+          link.click();
+          document.body.removeChild(link);
+        };
+        buttonGroup.appendChild(downloadButton);
+
         var deleteButton = document.createElement('button');
         deleteButton.className = 'delete-button';
-        deleteButton.innerHTML = '&#128465;'; // Trash icon
+        deleteButton.innerHTML = '&#x1F5D1; Delete';
         deleteButton.onclick = function() {
-          modal.style.display = "block";
-          // Store the image data to be deleted
-          var imageDataToDelete = imageData;
-          // On password submission, try to delete the image
-          document.getElementById("password-submit").onclick = function() {
-            var password = document.getElementById("password-input").value;
-            if (password === PASSWORD) {
-              // Remove the image from preview
-              container.remove();
-              // Remove the image from local storage
-              removeImage(imageDataToDelete);
-              // Close the modal
-              modal.style.display = "none";
-            } else {
-              alert("Incorrect password. Please try again.");
-            }
-          };
+          container.remove();
+          removeImage(imageData);
         };
-        container.appendChild(deleteButton);
+        buttonGroup.appendChild(deleteButton);
 
-        var downloadButton = document.createElement('a');
-        downloadButton.className = 'download-button';
-        downloadButton.innerHTML = '&#x2B07;'; // Download icon
-        downloadButton.href = imageData;
-        downloadButton.download = 'image'; // Default download filename
-        container.appendChild(downloadButton);
+        container.appendChild(buttonGroup);
 
         preview.appendChild(container);
 
-        saveImage(imageData);
+        saveImage(imageData, caption.textContent, description.value);
       };
 
       reader.readAsDataURL(file);
     }
   });
 
-  // Function to save image data to local storage
-  function saveImage(imageData) {
+  function saveImage(imageData, captionText, descriptionText) {
     var images = JSON.parse(localStorage.getItem('images')) || [];
-    images.push(imageData);
+    images.push({ imageData: imageData, caption: captionText, description: descriptionText });
     localStorage.setItem('images', JSON.stringify(images));
   }
 
-  // Function to remove image data from local storage
   function removeImage(imageData) {
     var images = JSON.parse(localStorage.getItem('images')) || [];
-    var index = images.indexOf(imageData);
+    var index = images.findIndex(function(img) {
+      return img.imageData === imageData;
+    });
     if (index !== -1) {
       images.splice(index, 1);
       localStorage.setItem('images', JSON.stringify(images));
     }
   }
 
-  // Function to display images from local storage
   function displayImagesFromLocalStorage() {
     var preview = document.getElementById('preview');
     preview.innerHTML = '';
 
     var images = JSON.parse(localStorage.getItem('images')) || [];
-    images.forEach(function(imageData) {
+    images.forEach(function(image) {
       var container = document.createElement('div');
       container.className = 'preview-image-container';
 
       var img = document.createElement('img');
-      img.src = imageData;
+      img.src = image.imageData;
       img.className = 'preview-image';
       container.appendChild(img);
 
+      var caption = document.createElement('div');
+      caption.className = 'caption';
+      caption.textContent = image.caption;
+      container.appendChild(caption);
+
+      var description = document.createElement('div');
+      description.className = 'description';
+      description.textContent = image.description;
+      container.appendChild(description);
+
+      var buttonGroup = document.createElement('div');
+      buttonGroup.className = 'button-group';
+
+      var downloadButton = document.createElement('button');
+      downloadButton.className = 'download-button';
+      downloadButton.innerHTML = '&#x2B07; Download';
+      downloadButton.onclick = function() {
+        var link = document.createElement('a');
+        link.href = image.imageData;
+        link.download = 'image';
+        document.body.appendChild(link);
+        link.click();
+        document.body.removeChild(link);
+      };
+      buttonGroup.appendChild(downloadButton);
+
       var deleteButton = document.createElement('button');
       deleteButton.className = 'delete-button';
-      deleteButton.innerHTML = '&#128465;'; // Trash icon
+      deleteButton.innerHTML = '&#x1F5D1; Delete';
       deleteButton.onclick = function() {
-        modal.style.display = "block";
-        // Store the image data to be deleted
-        var imageDataToDelete = imageData;
-        // On password submission, try to delete the image
-        document.getElementById("password-submit").onclick = function() {
-          var password = document.getElementById("password-input").value;
-          if (password === PASSWORD) {
-            // Remove the image from preview
-            container.remove();
-            // Remove the image from local storage
-            removeImage(imageDataToDelete);
-            // Close the modal
-            modal.style.display = "none";
-          } else {
-            alert("Incorrect password. Please try again.");
-          }
-        };
+        container.remove();
+        removeImage(image.imageData);
       };
-      container.appendChild(deleteButton);
+      buttonGroup.appendChild(deleteButton);
 
-      var downloadButton = document.createElement('a');
-      downloadButton.className = 'download-button';
-      downloadButton.innerHTML = '&#x2B07;'; // Download icon
-      downloadButton.href = imageData;
-      downloadButton.download = 'image'; // Default download filename
-      container.appendChild(downloadButton);
+      container.appendChild(buttonGroup);
 
       preview.appendChild(container);
+      
+      // Enable caption editing only if the password is entered
+      caption.addEventListener('click', function() {
+        var password = prompt("Enter the password to edit caption:");
+        if (password === captionPassword) {
+          var newCaption = prompt("Enter the new caption:");
+          if (newCaption !== null) {
+            image.caption = newCaption;
+            caption.textContent = newCaption;
+            localStorage.setItem('images', JSON.stringify(images));
+          }
+        } else {
+          alert("Incorrect password. You're not authorized to edit the caption.");
+        }
+      });
+      
+      // Enable description editing only if the password is entered
+      description.addEventListener('click', function() {
+        var password = prompt("Enter the password to edit description:");
+        if (password === descriptionPassword) {
+          var newDescription = prompt("Enter the new description:");
+          if (newDescription !== null) {
+            image.description = newDescription;
+            description.textContent = newDescription;
+            localStorage.setItem('images', JSON.stringify(images));
+          }
+        } else {
+          alert("Incorrect password. You're not authorized to edit the description.");
+        }
+      });
     });
   }
 
-  // Display images from local storage on page load
   displayImagesFromLocalStorage();
-
-  // Close the modal when the close button is clicked
-  span.onclick = function() {
-    modal.style.display = "none";
-  };
-
-  // Close the modal when clicked outside of it
-  window.onclick = function(event) {
-    if (event.target == modal) {
-      modal.style.display = "none";
-    }
-  };
 </script>
 
 </body>
