--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     body {
       background-color: #f2f2f2;
       font-family: Arial, sans-serif;
-      margin: 35px;
-      padding: 5px;
-      font-size: xx-large;
+      margin: 0;
+      padding: 0;
+      font-size: large;
     }
 
     .header {
@@ -37,7 +37,7 @@
     .dropbtn {
       background-color: #4CAF50; /* Green button color */
       color: white;
-      font-size: 20px;
+      font-size: 16px;
       border: none;
       cursor: pointer;
       border-radius: 50px;
@@ -79,6 +79,20 @@
       padding: 20px;
       color: blue;
       text-align: center;
+    }
+
+    /* Media queries for responsive design */
+    @media screen and (max-width: 600px) {
+      .dropbtn {
+        font-size: 14px;
+      }
+    }
+
+    @media screen and (max-width: 400px) {
+      .dropbtn {
+        padding: 8px 12px;
+        font-size: 12px;
+      }
     }
   </style>
 </head>
@@ -150,7 +164,7 @@
 <div id="academics" class="tabcontent">
   <!-- Content for the Academics page -->
   
-</div> <h1 color="blue"> NICHOLAS ACADEMIC RECOGNITION BY NTHUNGUNI SECONDARY SCHOOL</h1>
+</div> <h1 style="color: blue;"> NICHOLAS ACADEMIC RECOGNITION BY NTHUNGUNI SECONDARY SCHOOL</h1>
    
 <p>In a remarkable turn of events, Nicholas's outstanding academic performance and exemplary conduct caught the attention of Mr. Pythias Matuanga, the principal of Nthunguni Secondary School.<br>
 Impressed by Nicholas's dedication and intelligence, Mr. Matuanga saw potential in him beyond being just a student.</p>
@@ -161,7 +175,7 @@ This invitation was a testament to Nicholas's exceptional character and the high
 
 <p>Nicholas accepted the offer with gratitude and humility, eager to contribute to the educational environment that had shaped him.<br>
 He found immense fulfillment in sharing his knowledge and experiences with his peers, serving as a mentor and role model to younger students.</p>
-<img src="C:\Users\user\Pictures\InShot_20230717_163203648.jpg" width="350" height="300"><br><em ><u>Nicholas in the  office</u></em></img>
+<img src="C:\Users\user\Pictures\InShot_20230717_163203648.jpg" width="350" height="300"><br><em ><u>Nicholas in  the  office</u></em></img>
 <p>Furthermore, Nicholas's efforts did not go unnoticed by the school community.<br>
 At the end of the second term, during the closing meeting of the year, Nicholas was given the opportunity to deliver a speech.<br>
 In his speech, he expressed his heartfelt appreciation to the principal, teachers, and fellow students for their unwavering support and cooperation throughout his journey at Nthunguni Secondary School.</p>
