--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     body {
       background-color: #f2f2f2;
       font-family: Arial, sans-serif;
-      margin: 0;
+      margin: 20px; /* Adding margin */
       padding: 0;
       font-size: large;
     }
@@ -27,6 +27,7 @@
       margin: 5px;
       border-radius: 10px;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      text-align: center; /* Align center */
     }
 
     .dropdown {
@@ -43,6 +44,7 @@
       border-radius: 50px;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
       padding: 10px 20px;
+      text-align: center; /* Align center */
     }
 
     /* Dropdown content (hidden by default) */
@@ -53,6 +55,7 @@
       min-width: 160px;
       box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
       z-index: 1;
+      text-align: left; /* Align left */
     }
 
     /* Links inside the dropdown */
@@ -232,7 +235,7 @@ His dedication, humility, and resilience had left an indelible mark on the schoo
 <br>
 <div class="container" >
   <h2>brief</h2>
-  <p>nicholas is a web developer with good grounds in website development<br>he needs your support to continue growing his skills<br>Till no.9945423 </p>
+  <p>nicholas is a web developer with good grounds in website development<br></p>
 </div>
 
 <div class="container" id="contact">
@@ -240,7 +243,7 @@ His dedication, humility, and resilience had left an indelible mark on the schoo
   <p></p> for inquiries
   <ul>
     <li>Email: nicholaskialo265@gmail.com</li>
-    <li>Phone: +254762458354</li>
+    <li>Phone: +254743763147</li>
   </ul>
 </div>
 <br>
