--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
       font-family: Arial, sans-serif;
       margin: 20px; /* Adding margin */
       padding: 0;
-      font-size: large;
+      font-size: medium;
     }
 
     .header {
-      background-color: #333;
+      background-color: black;
       color: white;
       text-align: center;
       padding: 20px;
@@ -25,7 +25,7 @@
       background-color:burlywood;
       padding: 10px;
       margin: 5px;
-      border-radius: 10px;
+      border-radius: 5px;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
       text-align: center; /* Align center */
     }
@@ -55,7 +55,7 @@
       min-width: 160px;
       box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
       z-index: 1;
-      text-align: left; /* Align left */
+      text-align: center; /* Align left */
     }
 
     /* Links inside the dropdown */
@@ -103,7 +103,7 @@
 
 <div class="header">
   <h1>
-    Chronicles of NICHOLAS: Navigating History, Politics, Society, Academia, and Skills</h1>
+    </h1>
 </div>
 
 <div class="container">
