--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
         padding: 8px 12px;
         font-size: 12px;
       }
+      h1{font-size:10px;background-color:black; color:white;}
     }
   </style>
 </head>
