--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     }
 
     .header {
-      background-color: black;
-      color: white;
+      background-color:white;
+      color:black;
       text-align: center;
       padding: 20px;
     }
@@ -96,7 +96,7 @@
         padding: 8px 12px;
         font-size: 12px;
       }
-      h1{font-size:10px;background-color:black; color:white;}
+      h1{font-size:10px;background-color:white; color:black;}
     }
   </style>
 </head>
