--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ His dedication, humility, and resilience had left an indelible mark on the schoo
     <br>
     <br>
    <button type="container"></button>
-   To see more nicholas' photos and videos follow the link below <a href="photos.html"><div>$%#$@*&*^&^%^$#%^#@#222!@!##$@#$%##&*^^</div></a>
+    click link below <a href="photos.html"><div> photo Gallary</div></a>
 <br>
 <div class="container" >
   <h2>brief</h2>
@@ -248,10 +248,8 @@ His dedication, humility, and resilience had left an indelible mark on the schoo
   </ul>
 </div>
 <br>
-<div class="container" id="links">
+© copyright 2024
 
-  <a href="photos.html"> photos</a>
-</button></div>
 <!-- Add more tabcontent divs for additional pages -->
 
 <script>
