--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 <div id="academics" class="tabcontent">
   <!-- Content for the Academics page -->
   
-</div> <h1 style="color: blue;"> NICHOLAS ACADEMIC RECOGNITION BY NTHUNGUNI SECONDARY SCHOOL</h1>
+</div> <h1 style="color: black;"> NICHOLAS ACADEMIC RECOGNITION BY NTHUNGUNI SECONDARY SCHOOL</h1>
    
 <p>In a remarkable turn of events, Nicholas's outstanding academic performance and exemplary conduct caught the attention of Mr. Pythias Matuanga, the principal of Nthunguni Secondary School.<br>
 Impressed by Nicholas's dedication and intelligence, Mr. Matuanga saw potential in him beyond being just a student.</p>
