--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     }
 
     .header {
-      background-color:white;
-      color:black;
+      background-color:black;
+      color:white;
       text-align: center;
       padding: 20px;
     }
@@ -35,7 +35,7 @@
       margin: 5px;
     }
 
-    .dropbtn {
+    .dropbtn:hover {
       background-color: #4CAF50; /* Green button color */
       color: white;
       font-size: 16px;
