--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       font-family: Arial, sans-serif;
       margin: 20px; /* Adding margin */
       padding: 0;
-      font-size: medium;
+      font-size: medium; align:center;
     }
 
     .header {
