--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       margin: 5px;
     }
 
-    .dropbtn:hover {
+    .dropbtn{
       background-color: #4CAF50; /* Green button color */
       color: white;
       font-size: 16px;
