--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
             text-align: left;
             margin-bottom: 10px;
         }
-        p{background-color: rgb(16, 153, 96);width:auto; font-size: 20px;}
+        p{background-color:white;width:auto; font-size: 20px;}
     </style>
 </head>
 <body>
-   <div class="p" <h1 color="blue"> NICHOLAS ACADEMIC RECOGNITION BY NTHUNGUNI SECONDARY SCHOOL</h1>
+   <div class="p" <h1 color="black"> NICHOLAS ACADEMIC RECOGNITION BY NTHUNGUNI SECONDARY SCHOOL</h1>
 
 <p>In a remarkable turn of events, Nicholas's outstanding academic performance and exemplary conduct caught the attention of Mr. Pythias Matuanga, the principal of Nthunguni Secondary School.<br>
 Impressed by Nicholas's dedication and intelligence, Mr. Matuanga saw potential in him beyond being just a student.</p>
@@ -29,7 +29,7 @@ This invitation was a testament to Nicholas's exceptional character and the high
 
 <p>Nicholas accepted the offer with gratitude and humility, eager to contribute to the educational environment that had shaped him.<br>
 He found immense fulfillment in sharing his knowledge and experiences with his peers, serving as a mentor and role model to younger students.</p>
-<img src="C:\Users\user\Pictures\" width="350" height="300"></img><br><em><u>Nicholas in the  office</u></em></img>
+<img src="C:\Users\user\Pictures\" width="350px" height="300px"></img><br><em><u>Nicholas in the  office</u></em></img>
 <p>Furthermore, Nicholas's efforts did not go unnoticed by the school community.<br>
 At the end of the second term, during the closing meeting of the year, Nicholas was given the opportunity to deliver a speech.<br>
 In his speech, he expressed his heartfelt appreciation to the principal, teachers, and fellow students for their unwavering support and cooperation throughout his journey at Nthunguni Secondary School.</p>
